--- a/src/app/components/table-of-contents/table-of-contents.html
+++ b/src/app/components/table-of-contents/table-of-contents.html
@@ -11,21 +11,22 @@
   }
 </button>
 
-@if (open()) {
-  <div class="toc-backdrop" (click)="close()"></div>
-  <nav class="toc" aria-label="Table of Contents">
-    <div class="toc-title">Contents</div>
-    <ol class="toc-list">
-      @for (s of sections; track s.id) {
-        <li [class.toc-active]="scrollSpy.activeId() === s.id">
-          <a [href]="'#' + s.id" (click)="close()">
-            @if (s.number !== null) {
-              <span class="toc-number">{{ s.number }}</span>
-            }
-            {{ s.title }}
-          </a>
-        </li>
-      }
-    </ol>
-  </nav>
+<nav class="toc" [class.toc--open]="open()" aria-label="Table of Contents">
+  <div class="toc-title">Contents</div>
+  <ol class="toc-list">
+    @for (s of sections; track s.id) {
+      <li [class.toc-active]="scrollSpy.activeId() === s.id">
+        <a [href]="'#' + s.id" (click)="onLinkClick()">
+          @if (s.number !== null) {
+            <span class="toc-number">{{ s.number }}</span>
+          }
+          {{ s.title }}
+        </a>
+      </li>
+    }
+  </ol>
+</nav>
+
+@if (open() && !isWide()) {
+  <div class="toc-backdrop" (click)="open.set(false)"></div>
 }
