--- a/src/app/components/table-of-contents/table-of-contents.html
+++ b/src/app/components/table-of-contents/table-of-contents.html
@@ -5,9 +5,9 @@
   title="Table of Contents"
 >
   @if (open()) {
-    <app-icon name="x" [size]="20" />
+    <i class="ph-duotone ph-x" style="font-size: 20px"></i>
   } @else {
-    <app-icon name="list" [size]="20" />
+    <i class="ph-duotone ph-list" style="font-size: 20px"></i>
   }
 </button>
 
