--- a/src/app/app.css
+++ b/src/app/app.css
@@ -110,6 +110,7 @@
   color: var(--text-color);
   transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
   display: inline-flex;
+  font-size: 24px;
 }
 
 .icon-link:hover {
