--- a/src/app/app.css
+++ b/src/app/app.css
@@ -261,9 +261,7 @@
   opacity: 0.7;
 }
 
-/* Base: hidden */
 .toc {
-  display: none;
   font-size: 0.8rem;
   line-height: 1.5;
 }
@@ -318,8 +316,7 @@
 
 /* Wide screens: clean sidebar to the left of paper */
 @media (min-width: 1301px) {
-  .toc--open {
-    display: block;
+  .toc {
     position: fixed;
     top: 4rem;
     left: calc((100vw - 900px) / 2 - 230px);
@@ -330,8 +327,7 @@
 
 /* Narrow screens: drawer overlay */
 @media (max-width: 1300px) {
-  .toc--open {
-    display: block;
+  .toc {
     position: fixed;
     top: 0;
     left: 0;
