--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -30,7 +30,7 @@
       <i class="ph-duotone ph-github-logo"></i>
     </a>
     <a href="https://scholar.google.com/citations?user=58tv6skAAAAJ" target="_blank" rel="noopener noreferrer" class="icon-link" aria-label="Google Scholar">
-      <i class="ph-duotone ph-read-cv-logo"></i>
+      <i class="ph-duotone ph-graduation-cap"></i>
     </a>
     <a href="https://linkedin.com/in/pufanyi" target="_blank" rel="noopener noreferrer" class="icon-link" aria-label="LinkedIn">
       <i class="ph-duotone ph-linkedin-logo"></i>
